Fix text-align

--- a/style.css
+++ b/style.css
@@ -178,6 +178,7 @@ header {
   font-weight: 500;
   background-color: #ffebb5;
   padding: 0 2em;
+  text-align: center;
 }
 
 #additional-information article {
